--- a/docker/server/src/main/server-pytorch/requirements.txt
+++ b/docker/server/src/main/server-pytorch/requirements.txt
@@ -8,6 +8,9 @@ pandas==1.3.5
 python-dateutil==2.8.2
 pytz==2022.1
 six==1.16.0
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
 torch==1.10.2
 typing_extensions==4.2.0
 wrapt==1.14.1
